--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -534,7 +534,7 @@ footer nav ul {
 	display: flex;
 	justify-content:center;
 	align-items: center;
-	min-height: 150px;
+	height: 50px;
 }
 
 .filters button { 
